// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly with 1 expense 1`] = `
<div>
  <h3>
    Expense Summary
  </h3>
  <p>
    Viewing 
    1
     
    expense
  </p>
  <p>
    Total : 
    $2.35
  </p>
</div>
`;

exports[`should render ExpenseSummary correctly with multiple expenses 1`] = `
<div>
  <h3>
    Expense Summary
  </h3>
  <p>
    Viewing 
    23
     
    expenses
  </p>
  <p>
    Total : 
    $125,436.00
  </p>
</div>
`;
